# ny-feoko

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ambara  pyproject.toml
.github/workflows/: notebook-ci.yml
apps/api/: pyproject.toml
apps/api/src/application/services/: audio_processing.py  clip_extraction.py  training.py
apps/api/src/application/types/: __init__.py  ingest.py  training.py
apps/api/src/application/use_cases/: export_training.py  ingest_run.py  list_runs.py  manage_runs.py  redraft_clips.py  sync_run.py
apps/api/src/domain/: exceptions.py
apps/api/src/domain/entities/: clip.py  job.py  run.py
apps/api/src/domain/ports/: classifier.py  clip_repository.py  downloader.py  job_repository.py  run_repository.py  storage.py  transcriber.py  vad.py
apps/api/src/infra/: config.py
apps/api/src/infra/clients/: supabase.py  youtube.py
apps/api/src/infra/clients/ml/: classifier.py  hf_auth.py  hf_transcriber.py  model_cache.py  transcriber.py  vad.py
apps/api/src/infra/repositories/: supabase_clip_repo.py  supabase_job_repo.py  supabase_run_repo.py  supabase_storage.py
apps/api/src/infra/telemetry/: __init__.py  gpu.py  logging.py  metrics.py  setup.py
apps/api/src/ports/cli/: app.py
apps/api/src/ports/rest/: app.py
apps/api/src/ports/rest/routes/: export.py  ingest.py  jobs.py  metrics.py  redraft.py  runs.py
apps/api/tests/application/: test_request_types.py  test_services.py  test_use_cases.py
apps/api/tests/domain/: test_entities.py
apps/api/tests/infra/: test_config.py  test_gpu.py  test_hf_auth.py  test_model_cache.py  test_repositories.py  test_telemetry.py
apps/api/tests/ports/: test_cli.py  test_rest.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: ChapterSplitter.tsx  ChunkRecorder.tsx  ClipEditor.tsx  ClipList.tsx  JobProgressCard.tsx  RunCard.tsx  Toast.tsx  Waveform.tsx
apps/web/src/hooks/: useClipActions.ts  useClipEditorKeyboard.ts  useClipsData.ts  useGuardedNavigation.ts  useJobPolling.ts  useRecentJobs.ts  useShortcutLabels.ts
apps/web/src/lib/: audio-split.ts  format.ts  platform.ts  wav.ts
docs/: architecture.md  usage.md
docs/plans/: 2026-02-28-debt-cleanup-and-docs-design.md  2026-02-28-debt-cleanup-and-docs-plan.md  2026-03-02-api-integration-design.md  2026-03-02-api-integration-plan.md  2026-03-03-cli-observability-design.md  2026-03-03-cli-observability-plan.md  2026-03-03-model-selection-hf-auth-consistency-design.md  2026-03-03-training-logging-design.md  2026-03-03-training-logging-impl.md
docs/supabase/: 001_schema.sql  002_rls.sql  003_storage.sql  004_reading_type.sql  006_paragraphs.sql  007_jobs.sql
notebooks/: ambara_colab.ipynb  ambara_steps.ipynb
scripts/: bible_ingest.py  bible_scrape.py  requirements-bible.txt
services/api/: pyproject.toml
services/api/src/api/: app.py  config.py  jobs.py  models_cache.py
services/api/src/api/routes/: export.py  ingest.py  jobs.py  redraft.py
services/api/tests/: test_jobs.py
services/asr-training/: README.md  pyproject.toml
services/asr-training/src/asr_training/: __init__.py  callbacks.py  cli.py  collator.py  config.py  dataset.py  metrics.py  redraft.py  train.py
services/asr-training/tests/: test_config.py  test_redraft.py
services/clip-extraction/: README.md  pyproject.toml
services/clip-extraction/src/clip_extraction/: cli.py  pipeline.py  reporting.py
services/clip-extraction/src/clip_extraction/domain/: ports.py  segment_grouping.py
services/clip-extraction/src/clip_extraction/infrastructure/: classifier.py  hf_transcriber.py  transcriber.py  vad.py  writer.py
services/clip-extraction/tests/: test_segment_grouping.py
services/db-sync/: README.md  pyproject.toml
services/db-sync/src/db_sync/: cli.py  dump.py  exceptions.py  export.py  manage.py  pagination.py  run_resolution.py  supabase_client.py  sync.py
services/db-sync/tests/: test_export_training.py  test_pagination.py  test_run_resolution.py
services/mt-training/: pyproject.toml
services/mt-training/src/mt_training/: __init__.py
services/pipeline/: README.md  pyproject.toml
services/pipeline/src/pipeline/: cli.py  ingest.py  iterate.py
services/pipeline/tests/: test_ingest.py  test_iterate.py
services/transcript-editor/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
services/transcript-editor/lib/: csv.ts
services/transcript-editor/src/app/: globals.css  layout.tsx  page.tsx
services/yt-download/: README.md  pyproject.toml
services/yt-download/src/yt_download/: cli.py
services/yt-download/tests/: __init__.py  test_cli.py
shared/: README.md  pyproject.toml
shared/ny_feoko_shared/: audio_io.py  device.py  formatting.py  models.py
shared/tests/: __init__.py  test_audio_io.py  test_device.py  test_formatting.py
(+39 files in other folders)
