[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ny-feoko-workspace"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["shared", "services/clip-extraction/src", "services/db-sync/src", "services/asr-training/src", "services/mt-training/src", "services/pipeline/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = [
    "services/clip-extraction/tests",
    "services/asr-training/tests",
    "services/db-sync/tests",
    "services/pipeline/tests",
]
