[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ny-feoko-workspace"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps/api/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = [
    "apps/api/tests",
]
