[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambara"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.0",
    "typer>=0.12",
    "rich>=13",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "datasets",
    "evaluate",
    "jiwer",
    "soundfile>=0.12",
    "yt-dlp>=2024",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20",
    "prometheus-client>=0.19",
]

[project.scripts]
ambara = "ports.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/application", "src/infra", "src/ports"]
