[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-download"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ny-feoko-shared",
    "typer>=0.12",
    "rich>=13",
    "yt-dlp>=2026",
]

[project.scripts]
yt-download = "yt_download.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_download"]
